Fix queue time alignments

--- a/MaterialSkin/HTML/material/html/css/mobile.css
+++ b/MaterialSkin/HTML/material/html/css/mobile.css
@@ -440,7 +440,7 @@
   margin-right:-6px;
  }
  .pq-atime {
-  margin-right:15px;
+  margin-right:11px;
  }
  .np-menu-fab {
   right:5px!important;
