--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -2017,18 +2017,20 @@ div.v-rating i.primary--text, div.v-rating i.accent--text {
  line-height:var(--list-elem-height);
  opacity:var(--sub-opacity);
  margin-right:-28px;
- min-width:32px;
+ min-width:unset!important;
  margin-top:calc(19px - var(--std-font-size));
+ margin-left:4px;
 }
 
 .pq-atime {
  font-size:var(--small-font-size);
  font-weight:var(--bold-weight);
  opacity:1.0;
- min-width:32px;
  margin-right:9px;
  margin-top:2px;
+ margin-left:4px;
  text-align:end;
+ min-width:unset!important;
 }
 
 .pq-time-r {
